<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodo_list_card_view"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/inner_boxes"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/foodo_list_relative_view">

        <TextView
            android:id="@+id/foodo_list_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:height="70dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="0dp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>
