<resources>
    <string name="app_name">Foodo</string>
    <string name="button_name">Search Results</string>
    <string name="restaurant_name">Tim Hortons</string>
    <string name="restaurant_address">6525 Oak St, Vancouver, BC V6P 3Z3</string>
    <string name="restaurant_rating">5 stars</string>
    <string name="search_button">Search Button</string>
    <string name="search_hint">Search Restaurants</string>
    <string name="map_button">Map Button</string>
    <string name="search_title">Search</string>
    <string name="add_button">Add Foodo List Button</string>
    <string name="create_foodo_list_submit_button">Create Foodo List</string>
    <string name="create_foodo_list_hint">Enter Foodo List Name</string>
    <string-array name="rating_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="share_foodo_list_hint">Enter user email</string>
    <string name="share_foodo_list_submit_button">Share Foodo List</string>
    <string name="delete_foodo_restaurant_button">Delete Restaurant</string>
    <string name="server_client_id">415243569715-ft0h81psvpkm3ufbc9h5qlkomrd1k8bp.apps.googleusercontent.com</string>
    <string name="check_restaurant_button">Check Restaurant Button</string>
</resources>