<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="800px"
    android:layout_height="800px"
    android:layout_gravity="center"
    android:background="@drawable/foodo_list_popup_background"
    tools:context=".FoodoListActivity">

    <EditText
        android:id="@+id/enter_foodo_list_name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/create_foodo_list_hint"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <Button
        android:id="@+id/create_foodo_list_confirm_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/create_foodo_list_submit_button"
        android:background="@drawable/long_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_foodo_list_name_edit_text" />

    <Button
        android:id="@+id/create_foodo_list_cancel_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


</androidx.constraintlayout.widget.ConstraintLayout>